--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.github.harunhasdal.livecycle</groupId>
     <artifactId>process-logger</artifactId>
     <version>1.0</version>
-    <description>Logger component for LiveCycle processes.</description>
+    <description>Logger component for Adobe LiveCycle processes.</description>
 
     <modelVersion>4.0.0</modelVersion>
 
