--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <description>Logger component for Adobe LiveCycle processes.</description>
 
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
+    <url>https://github.com/harunhasdal/process-logger</url>
+    <licenses>
+        <license>
+            <name>The MIT License (MIT)</name>
+            <url>http://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,9 +34,9 @@
     </developers>
 
     <scm>
+        <url>https://github.com/harunhasdal/process-logger.git</url>
         <connection>scm:git:git@github.com:harunhasdal/process-logger.git</connection>
         <developerConnection>scm:git:git@github.com:harunhasdal/process-logger.git</developerConnection>
-        <url>https://github.com/harunhasdal/process-logger.git</url>
     </scm>
 
     <issueManagement>
