--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <name>process-logger</name>
     <groupId>com.github.harunhasdal.livecycle</groupId>
     <artifactId>process-logger</artifactId>
-    <version>1.1</version>
+    <version>1.0.SNAPSHOT</version>
     <description>Logger component for Adobe LiveCycle processes.</description>
 
     <modelVersion>4.0.0</modelVersion>
